k8s/monitoring/netronome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netronome
  namespace: monitoring
  labels:
    app: netronome
    app.kubernetes.io/name: netronome
spec:
  selector:
    matchLabels:
      app: netronome
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: netronome
        app.kubernetes.io/name: netronome
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
        - name: netronome
          image: ghcr.io/autobrr/netronome:latest@sha256:e6e43960e60e5a84e1eff325af179ebe383ea3c63b57a142d696729f825e867b
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7575
          volumeMounts:
            - name: data
              mountPath: /data
            - name: netronome-config
              mountPath: /data/.config/netronome/config.toml
              subPath: config.toml
      volumes:
        - name: data
          hostPath:
            path: /config/netronome
            type: DirectoryOrCreate
        - name: netronome-config
          configMap:
            name: netronome-config
      restartPolicy: Always
