k8s/monitoring/netronome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netronome
  namespace: monitoring
  labels:
    app: netronome
spec:
  selector:
    app: netronome
  type: ClusterIP
  ports:
    - name: http
      port: 7575
      targetPort: 7575
      protocol: TCP
